2014-06-06 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/massive/massive_copy_modules.php,
	godmode/massive/massive_delete_modules.php: Fixed bug that all
	agents the user can view could be targets of the operation, if
	the user has an AW privilege for any.

2014-06-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_snmp_browser.php: Fixed an error.
	
	* index.php: Modified the config.php permission check
	on Windows systems.

2014-06-06 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_edit_agents.php: Fixed bug that all
	agents the user can view could be targets of the operation, if
	the user has an AW privilege for any agents.

2014-06-06 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/massive/massive_add_alerts.php: Fixed bug that all
	agents the user can view would be target of the operation, if
	the user has an AW privilege for any agent group.

2014-06-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php: Fix sql error in the layer that 
	appears when put the mouse over a node in network map related with tags
	in users without acl profiles assigned (just admin assigned) Ticket #824

2014-06-05  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php: Change the format of the agent interval
	from seconds to human format for in global search. Ticket #867

2014-06-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/files_repo/files_repo_get_file.php,
	  extensions/files_repo/files_repo_list.php,
	  extensions/files_repo/functions_files_repo.php,
	  godmode/setup/setup_general.php: Improved the Windows
	compatibility and fixed some errors.

2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/agentes/configurar_agentes.php: Changed
	interval in conf.

2014-06-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/gis_maps/configure_gis_maps.php: Changed
	button when you update.
