@@ -220,6 +220,12 @@ $table_data->style[1] = 'width: 70%;';
 $table_data->head[0] = ' <span>' . __('Agent info') . '</span>';
 $table_data->head_colspan[0] = 2;
 
+$data = array();
+$data[0] = '<b>' . __('Group') . '</b>';
+$data[1] = '<a href="index.php?sec=estado&amp;sec2=operation/agentes/estado_agente&amp;refr=60&amp;group_id='.$agent["id_grupo"].'">'.groups_get_name ($agent["id_grupo"]).'</a>';
+
+$table_data->data[] = $data;
+
 if (!empty($addresses)) {
 	$data = array();
 	$data[0] = '<b>' . __('Other IP addresses') . '</b>';
